--- a/index.html
+++ b/index.html
@@ -485,98 +485,67 @@
 
     <footer class="footer-main">
         <nav class="container-footer">
-          <div class="web-footer">
-            <a href="index.html" class="webstudio webstudio-footer"
-              ><span class="accent">Web</span>Studio</a
-            >
-  
-            <ul class="footer-link">
-              <li class="footer-margin">
-                <a
-                  class="link footer-adress"
-                  href="https://www.google.com/maps/d/u/0/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
-                >
-                  г. Киев, пр-т Леси Украинки, 26
-                </a>
-              </li>
-              <li class="footer-margin">
-                <a class="link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
-              </li>
-              <li class="footer-margin">
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </div>
-          <div class="join">
-            <b>ПРИСОЕДИНЯЙТЕСЬ</b>
-            <ul class="container-join">
-              <li>
-                <a
-                  class="join-icon-link"
-                  href="https://instagram.com/"
-                  target="_blank"
-                  rel="noopener noreferer"
-                >
-                  <svg class="join-icon-svg">
-                    <use href="./img/icon/sprite.svg#team-icon1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="join-icon-link"
-                  href="https://twitter.com/"
-                  target="_blank"
-                  rel="noopener noreferer"
-                >
-                  <svg class="join-icon-svg">
-                    <use href="./img/icon/sprite.svg#team-icon2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="join-icon-link"
-                  href="https://fasebook.com/"
-                  target="_blank"
-                  rel="noopener noreferer"
-                >
-                  <svg class="join-icon-svg">
-                    <use href="./img/icon/sprite.svg#team-icon3"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="join-icon-link"
-                  href="https://linkedin.com/"
-                  target="_blank"
-                  rel="noopener noreferer"
-                >
-                  <svg class="join-icon-svg">
-                    <use href="./img/icon/sprite.svg#team-icon4"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="subscribe">
-            <label for="subscribe">Подпишитесь на рассылку</label>
-            <form class="footer-form">
-              <input
-                class="in-subscribe"
-                type="email"
-                name="subscribe"
-                placeholder="E-mail"
-                id="subscribe"
-              />
-              <button class="btn-subscribe">Подписаться</button>
-            </form>
-          </div>
+            <div class="web-footer">
+                <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Studio</a>
+
+                <ul class="footer-link">
+                    <li class="footer-margin">
+                        <a class="link footer-adress"
+                            href="https://www.google.com/maps/d/u/0/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                    </li>
+                    <li class="footer-margin">
+                        <a class="link" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="footer-margin">
+                        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="join">
+                <b>ПРИСОЕДИНЯЙТЕСЬ</b>
+                <ul class="container-join">
+                    <li>
+                        <a class="join-icon-link" href="https://instagram.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="join-icon-svg">
+                                <use href="./img/icon/sprite.svg#team-icon1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="join-icon-link" href="https://twitter.com/" target="_blank" rel="noopener noreferer">
+                            <svg class="join-icon-svg">
+                                <use href="./img/icon/sprite.svg#team-icon2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="join-icon-link" href="https://fasebook.com/" target="_blank" rel="noopener noreferer">
+                            <svg class="join-icon-svg">
+                                <use href="./img/icon/sprite.svg#team-icon3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="join-icon-link" href="https://linkedin.com/" target="_blank" rel="noopener noreferer">
+                            <svg class="join-icon-svg">
+                                <use href="./img/icon/sprite.svg#team-icon4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <label for="subscribe">Подпишитесь на рассылку</label>
+                <form class="footer-form">
+                    <input class="in-subscribe" type="email" name="subscribe" placeholder="E-mail" id="subscribe" />
+                    <button class="btn-subscribe">Подписаться</button>
+                </form>
+            </div>
         </nav>
-      </footer>
+    </footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
 </body>
